--- a/index.html
+++ b/index.html
@@ -39,18 +39,21 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand" href="#">Blast Zone Studios</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
+                        <a href="#">Games</a>
+                    </li>
+                    <li>
                         <a href="#">About</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="#">Blog</a>
                     </li>
-                    <li>
+		            <li>
                         <a href="#">Contact</a>
                     </li>
                 </ul>
@@ -69,18 +72,18 @@
             <div class="col-md-8">
 
                 <h1 class="page-header">
-                    Page Heading
+                    Blast Zone Studios
                     <small>Secondary Text</small>
                 </h1>
 
                 <!-- First Blog Post -->
                 <h2>
-                    <a href="#">Blog Post Title</a>
+                    <a href="#">Update on Haunted House Game</a>
                 </h2>
                 <p class="lead">
                     by <a href="index.php">Start Bootstrap</a>
                 </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 28, 2013 at 10:00 PM</p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on October 5th, 2014 at 10:00 PM</p>
                 <hr>
                 <img class="img-responsive" src="http://placehold.it/900x300" alt="">
                 <hr>
@@ -138,56 +141,56 @@
 
                 <!-- Blog Search Well -->
                 <div class="well">
-                    <h4>Blog Search</h4>
+                    <h4>Sign up for more BZS</h4>
                     <div class="input-group">
                         <input type="text" class="form-control">
                         <span class="input-group-btn">
                             <button class="btn btn-default" type="button">
-                                <span class="glyphicon glyphicon-search"></span>
+                                Join
                         </button>
                         </span>
                     </div>
                     <!-- /.input-group -->
                 </div>
+                
+                <!-- Side Widget Well -->
+                <div class="well">
+                    <h4>Follow us</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
+                </div>
 
                 <!-- Blog Categories Well -->
                 <div class="well">
-                    <h4>Blog Categories</h4>
+                    <h4>Recent Entries</h4>
                     <div class="row">
                         <div class="col-lg-6">
                             <ul class="list-unstyled">
-                                <li><a href="#">Category Name</a>
+                                <li><a href="#">Example</a>
                                 </li>
-                                <li><a href="#">Category Name</a>
+                                <li><a href="#">Example</a>
                                 </li>
-                                <li><a href="#">Category Name</a>
+                                <li><a href="#">Example</a>
                                 </li>
-                                <li><a href="#">Category Name</a>
+                                <li><a href="#">Example</a>
                                 </li>
                             </ul>
                         </div>
                         <!-- /.col-lg-6 -->
                         <div class="col-lg-6">
                             <ul class="list-unstyled">
-                                <li><a href="#">Category Name</a>
+                                <li><a href="#">Example</a>
                                 </li>
-                                <li><a href="#">Category Name</a>
+                                <li><a href="#">Example</a>
                                 </li>
-                                <li><a href="#">Category Name</a>
+                                <li><a href="#">Example</a>
                                 </li>
-                                <li><a href="#">Category Name</a>
+                                <li><a href="#">Example</a>
                                 </li>
                             </ul>
                         </div>
                         <!-- /.col-lg-6 -->
                     </div>
                     <!-- /.row -->
-                </div>
-
-                <!-- Side Widget Well -->
-                <div class="well">
-                    <h4>Side Widget Well</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
                 </div>
 
             </div>
@@ -201,7 +204,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Blast Zone Studios 2014</p>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
