--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <div class="well">
                     <h4>Sign up for more BZS</h4>
                     <div class="input-group">
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" placeholder="Enter email address">
                         <span class="input-group-btn">
                             <button class="btn btn-default" type="button">
                                 Join
