--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Blast Zone Studios 2014</p>
+                    <p>Contact us: (xxx) xxx-xxxx or support@blastzonestudios.com. Copyright &copy; Blast Zone Studios 2014</p>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
