--- a/index.html
+++ b/index.html
@@ -156,7 +156,21 @@
                 <!-- Side Widget Well -->
                 <div class="well">
                     <h4>Follow us</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
+                    <a href="https://www.facebook.com/BlastZoneStudios">
+                        <img src="img/FB-f-Logo__blue_72.png" alt="Facebook" style="height:40px;" />
+                    </a>
+                    <a href="https://twitter.com/BlastZoneGames">
+                        <img src="img/twitter-bird-white-on-blue.png" alt="Twitter" style="height:40px;" />
+                    </a>
+                    <a href="https://plus.google.com/116851974231911022995?prsrc=3" rel="publisher" target="_top" style="text-decoration:none;">
+                        <img src="//ssl.gstatic.com/images/icons/gplus-64.png" alt="Google+" style="height:40px;"/>
+                    </a>
+                    <a href="mailto:support@blastzonestudios.com?subject=Hello%20There!">
+                        <img src="img/Email-button.png" alt="Email" style="height:40px;" />
+                    </a>
+                    <a href="http://www.youtube.com/user/BlastZoneStudios">
+                        <img src="img/yt-brand-standard-logo-95x40.png" alt="Youtube" style="height:40px;" />
+                    </a>
                 </div>
 
                 <!-- Blog Categories Well -->
