added game logos

--- a/games.html
+++ b/games.html
@@ -71,7 +71,7 @@
 
             <div class="carousel slide" id="this-carousel-id">
                 <!-- class of slide for animation -->
-                
+
                 <ol class="carousel-indicators">
                     <li data-target="#this-carousel-id" data-slide-to="0" class="active"></li>
                     <li data-target="#this-carousel-id" data-slide-to="1"></li>
@@ -95,7 +95,7 @@
                 href values must reference the id for this carousel -->
                 <a class="carousel-control left" data-slide="prev" href="#this-carousel-id"></a>
                 <a class="carousel-control right" data-slide="next" href="#this-carousel-id"></a>
-            </div><!-- /.carousel -->	
+            </div><!-- /.carousel -->
 		</div>
 
         <div class="row">
@@ -108,63 +108,78 @@
 
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+                    <img class="img-responsive" src="img/aimforthenest_icon.png" alt="400/300">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+                    <img class="img-responsive" src="img/swiperight_icon.png" alt="400/300">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+                    <img class="img-responsive" src="img/extremewalking_icon.png" alt="400/300">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+                    <img class="img-responsive" src="img/sushibear_icon.png" alt="400/300">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+                    <img class="img-responsive" src="img/spacedive_icon.png" alt="400/300">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+                    <img class="img-responsive" src="img/robotrecall_icon.png" alt="400/300">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+                    <img class="img-responsive" src="img/hoopsup_icon.png" alt="400/300">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+                    <img class="img-responsive" src="img/tilttowin_icon.png" alt="400/300">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+                    <img class="img-responsive" src="img/bottleblast_icon.png" alt="400/300">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+                    <img class="img-responsive" src="img/catsitter_icon.png" alt="400/300">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+                    <img class="img-responsive" src="img/cuddlecakes_icon.png" alt="400/300">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+                    <img class="img-responsive" src="img/bottleblast2_icon.png" alt="400/300">
                 </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+              <a class="thumbnail" href="#">
+                <img class="img-responsive" src="img/quickreflex_icon.png" alt="400/300">
+              </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+              <a class="thumbnail" href="#">
+                <img class="img-responsive" src="img/surfingsmiley_icon.png" alt="400/300">
+              </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+              <a class="thumbnail" href="#">
+                <img class="img-responsive" src="img/ninjahunterbear_icon.png" alt="">
+              </a>
             </div>
         </div>
 
