--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
 
             <div class="carousel slide" id="this-carousel-id">
                 <!-- class of slide for animation -->
-                
+
                 <ol class="carousel-indicators">
                     <li data-target="#this-carousel-id" data-slide-to="0" class="active"></li>
                     <li data-target="#this-carousel-id" data-slide-to="1"></li>
@@ -95,28 +95,36 @@
                 href values must reference the id for this carousel -->
                 <a class="carousel-control left" data-slide="prev" href="#this-carousel-id"></a>
                 <a class="carousel-control right" data-slide="next" href="#this-carousel-id"></a>
-            </div><!-- /.carousel -->	
+            </div><!-- /.carousel -->
 		</div>
 
         <div class="row">
-		
+
 		<div class="block">
-                
+
             <h2 id ="about" class="page-header">About Us</h2>
             <div class="row">
                 <div class="col-sm-3">
                     <img class="img-responsive img-circle" alt="300x200" src="http://placehold.it/300x300">
                 </div>
                 <div class="col-sm-3">
-                    <h3>Steven</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                    <section>
+                        <header>
+                            <h3>Steven</h3>
+                        </header>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                    </section>
                 </div>
 				<div class="col-sm-3">
                     <img class="img-responsive img-circle" alt="300x200" src="http://placehold.it/300x300">
                 </div>
                 <div class="col-sm-3">
-                    <h3>Jimmy</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                    <section>
+                        <header>
+                            <h3>Jimmy</h3>
+                        </header>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                    </section>
                 </div>
             </div>
             <div class="row">
@@ -124,15 +132,23 @@
                     <img class="img-responsive img-circle" alt="300x200" src="http://placehold.it/300x300">
                 </div>
                 <div class="col-sm-3">
-                    <h3>Raleigh</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                    <section>
+                        <header>
+                            <h3>Raleigh</h3>
+                        </header>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                    </section>
                 </div>
                 <div class="col-sm-3">
                     <img class="img-responsive img-circle" alt="300x200" src="http://placehold.it/300x300">
                 </div>
                 <div class="col-sm-3">
-                    <h3>Audrie</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                    <section>
+                        <header>
+                            <h3>Audrie</h3>
+                        </header>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                    </section>
                 </div>
             </div>
 			<div class="row">
@@ -140,15 +156,23 @@
                     <img class="img-responsive img-circle" alt="300x200" src="http://placehold.it/300x300">
                 </div>
                 <div class="col-sm-3">
-                    <h3>Dana</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                    <section>
+                        <header>
+                            <h3>Dana</h3>
+                        </header>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                    </section>
                 </div>
 				<div class="col-sm-3">
                     <img class="img-responsive img-circle" alt="300x200" src="http://placehold.it/300x300">
                 </div>
                 <div class="col-sm-3">
-                    <h3>Dan</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                    <section>
+                        <header>
+                            <h3>Dan</h3>
+                        </header>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                    </section>
                 </div>
             </div>
             <div class="row">
@@ -156,15 +180,23 @@
                     <img class="img-responsive img-circle" alt="300x200" src="http://placehold.it/300x300">
                 </div>
                 <div class="col-sm-3">
-                    <h3>Aaron</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                    <section>
+                        <header>
+                            <h3>Aaron</h3>
+                        </header>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                    </section>
                 </div>
                 <div class="col-sm-3">
                     <img class="img-responsive img-circle" alt="300x200" src="http://placehold.it/300x300">
                 </div>
                 <div class="col-sm-3">
-                    <h3>Dean</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                    <section>
+                        <header>
+                            <h3>Dean</h3>
+                        </header>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                    </section>
                 </div>
             </div>
         </div>
@@ -172,8 +204,6 @@
 
         </div>
         <!-- /.row -->
-
-        <hr>
 
         <!-- Footer -->
         <footer>
