--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             <div class="carousel slide" id="this-carousel-id">
                 <!-- class of slide for animation -->
-                
+
                 <ol class="carousel-indicators">
                     <li data-target="#this-carousel-id" data-slide-to="0" class="active"></li>
                     <li data-target="#this-carousel-id" data-slide-to="1"></li>
@@ -95,7 +95,7 @@
                 href values must reference the id for this carousel -->
                 <a class="carousel-control left" data-slide="prev" href="#this-carousel-id"></a>
                 <a class="carousel-control right" data-slide="next" href="#this-carousel-id"></a>
-            </div><!-- /.carousel -->	
+            </div><!-- /.carousel -->
 		</div>
 
         <div class="row">
@@ -103,42 +103,48 @@
             <!-- Blog Entries Column -->
             <div class="col-md-8">
                 <!-- First Blog Post -->
-                <h2>
-                    <a href="#">Update on Haunted House Game</a>
-                </h2>
-                <p>October 5th, 2014</p>
-                <hr>
-                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
-                <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
-
+                <article>
+                    <header>
+                        <h2>
+                            <a href="#">Update on Haunted House Game</a>
+                        </h2>
+                        <p>October 5th, 2014</p>
+                    </header>
+                    <img class="img-responsive" src="http://placehold.it/900x300" alt="">
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                    <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                  </article>
                 <hr>
 
                 <!-- Second Blog Post -->
-                <h2>
-                    <a href="#">Update on Haunted House Game</a>
-                </h2>
-                <p>October 5th, 2014</p>
-                <hr>
-                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
-                <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
-
+                <article>
+                    <header>
+                        <h2>
+                          <a href="#">Update on Haunted House Game</a>
+                        </h2>
+                        <p>October 5th, 2014</p>
+                    </header>
+                    <img class="img-responsive" src="http://placehold.it/900x300" alt="">
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                    <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                </article>
                 <hr>
 
                 <!-- Third Blog Post -->
-                <h2>
-                    <a href="#">Update on Haunted House Game</a>
-                </h2>
-                <p>October 5th, 2014</p>
-                <hr>
-                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
-                <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
-
+                <article>
+                    <header>
+                        <h2>
+                            <a href="#">Update on Haunted House Game</a>
+                        </h2>
+                        <p>October 5th, 2014</p>
+                    </header>
+                    <img class="img-responsive" src="http://placehold.it/900x300" alt="">
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                    <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                </article>
                 <hr>
 
                 <!-- Pager -->
@@ -155,81 +161,85 @@
 
             <!-- Blog Sidebar Widgets Column -->
             <div class="col-md-4">
-
-                <!-- Blog Search Well -->
-                <div class="well">
-                    <h4>Sign up for more BZS</h4>
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Enter email address">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">
-                                Join
-                        </button>
-                        </span>
+                <aside>
+                    <!-- Blog Search Well -->
+                    <div class="well">
+                        <section>
+                            <h4>Sign up for more BZS</h4>
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Enter e-mail address">
+                                <span class="input-group-btn">
+                                    <button class="btn btn-default" type="button">
+                                        Join
+                                    </button>
+                                </span>
+                            </div>
+                            <!-- /.input-group -->
+                        </section>
                     </div>
-                    <!-- /.input-group -->
-                </div>
-                
-                <!-- Side Widget Well -->
-                <div class="well">
-                    <h4>Follow us</h4>
-                    <a href="https://www.facebook.com/BlastZoneStudios">
-                        <img src="img/FB-f-Logo__blue_72.png" alt="Facebook" style="height:40px;" />
-                    </a>
-                    <a href="https://twitter.com/BlastZoneGames">
-                        <img src="img/twitter-bird-white-on-blue.png" alt="Twitter" style="height:40px;" />
-                    </a>
-                    <a href="https://plus.google.com/116851974231911022995?prsrc=3" rel="publisher" target="_top" style="text-decoration:none;">
-                        <img src="//ssl.gstatic.com/images/icons/gplus-64.png" alt="Google+" style="height:40px;"/>
-                    </a>
-                    <a href="mailto:support@blastzonestudios.com?subject=Hello%20There!">
-                        <img src="img/Email-button.png" alt="Email" style="height:40px;" />
-                    </a>
-                    <a href="http://www.youtube.com/user/BlastZoneStudios">
-                        <img src="img/yt-brand-standard-logo-95x40.png" alt="Youtube" style="height:40px;" />
-                    </a>
-                </div>
 
-                <!-- Blog Categories Well -->
-                <div class="well">
-                    <h4>Recent Entries</h4>
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href="#">Example</a>
-                                </li>
-                                <li><a href="#">Example</a>
-                                </li>
-                                <li><a href="#">Example</a>
-                                </li>
-                                <li><a href="#">Example</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <!-- /.col-lg-6 -->
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href="#">Example</a>
-                                </li>
-                                <li><a href="#">Example</a>
-                                </li>
-                                <li><a href="#">Example</a>
-                                </li>
-                                <li><a href="#">Example</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <!-- /.col-lg-6 -->
+                    <!-- Side Widget Well -->
+                    <div class="well">
+                        <section>
+                            <h4>Follow us</h4>
+                            <a href="https://www.facebook.com/BlastZoneStudios">
+                                <img src="img/FB-f-Logo__blue_72.png" alt="Facebook" style="height:40px;" />
+                            </a>
+                            <a href="https://twitter.com/BlastZoneGames">
+                                <img src="img/twitter-bird-white-on-blue.png" alt="Twitter" style="height:40px;" />
+                            </a>
+                            <a href="https://plus.google.com/116851974231911022995?prsrc=3" rel="publisher" target="_top" style="text-decoration:none;">
+                            <img src="//ssl.gstatic.com/images/icons/gplus-64.png" alt="Google+" style="height:40px;"/>
+                            </a>
+                            <a href="mailto:support@blastzonestudios.com?subject=Hello%20There!">
+                                <img src="img/Email-button.png" alt="Email" style="height:40px;" />
+                            </a>
+                            <a href="http://www.youtube.com/user/BlastZoneStudios">
+                                <img src="img/yt-brand-standard-logo-95x40.png" alt="Youtube" style="height:40px;" />
+                            </a>
+                        </section>
                     </div>
-                    <!-- /.row -->
-                </div>
 
+                    <!-- Blog Categories Well -->
+                    <div class="well">
+                        <section>
+                            <h4>Recent Entries</h4>
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <ul class="list-unstyled">
+                                        <li><a href="#">Example</a>
+                                        </li>
+                                        <li><a href="#">Example</a>
+                                        </li>
+                                        <li><a href="#">Example</a>
+                                        </li>
+                                        <li><a href="#">Example</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <!-- /.col-lg-6 -->
+                                <div class="col-lg-6">
+                                    <ul class="list-unstyled">
+                                        <li><a href="#">Example</a>
+                                        </li>
+                                        <li><a href="#">Example</a>
+                                        </li>
+                                        <li><a href="#">Example</a>
+                                        </li>
+                                        <li><a href="#">Example</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <!-- /.col-lg-6 -->
+                            </div>
+                            <!-- /.row -->
+                        </section>
+                    </div>
+                </aside>
             </div>
 
         </div>
         <!-- /.row -->
-
-        <hr>
 
         <!-- Footer -->
         <footer>
