added new social icons

--- a/index.html
+++ b/index.html
@@ -103,18 +103,10 @@
             <!-- Blog Entries Column -->
             <div class="col-md-8">
                 <!-- First Blog Post -->
-                <article>
-                    <header>
-                        <h2>
-                            <a href="#">Update on Haunted House Game</a>
-                        </h2>
-                        <p>October 5th, 2014</p>
-                    </header>
-                    <img class="img-responsive" src="http://placehold.it/900x300" alt="">
-                    <hr>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
-                    <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
-                  </article>
+                <h2>
+                    <a href="#">Update on Haunted House Game</a>
+                </h2>
+                <p>October 5th, 2014</p>
                 <hr>
 
                 <!-- Second Blog Post -->
@@ -199,6 +191,28 @@
                             </a>
                         </section>
                     </div>
+                    <!-- /.input-group -->
+                </div>
+
+                <!-- Side Widget Well -->
+                <div class="well">
+                    <h4>Follow us</h4>
+                    <a href="https://www.facebook.com/BlastZoneStudios">
+                        <img src="img/facebook_icon.png" alt="Facebook" style="height:40px;" />
+                    </a>
+                    <a href="https://twitter.com/BlastZoneGames">
+                        <img src="img/twitter_icon.png" alt="Twitter" style="height:40px;" />
+                    </a>
+                    <a href="https://plus.google.com/116851974231911022995?prsrc=3" rel="publisher" target="_top" style="text-decoration:none;">
+                        <img src="img/google_icon.png" alt="Google+" style="height:40px;"/>
+                    </a>
+                    <a href="mailto:support@blastzonestudios.com?subject=Hello%20There!">
+                        <img src="img/email_icon.png" alt="Email" style="height:40px;" />
+                    </a>
+                    <a href="http://www.youtube.com/user/BlastZoneStudios">
+                        <img src="img/youtube_icon.png" alt="Youtube" style="height:40px;" />
+                    </a>
+                </div>
 
                     <!-- Blog Categories Well -->
                     <div class="well">
@@ -249,6 +263,9 @@
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
+            <div>Icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com"
+              title="Flaticon">www.flaticon.com</a> is licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>
+              </div>
             <!-- /.row -->
         </footer>
 
