changed bg & text color & fixed Follow us

--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
 
                 <!-- Side Widget Well -->
                 <div class="well">
+                  <section>
                     <h4>Follow us</h4>
                     <a href="https://www.facebook.com/BlastZoneStudios">
                         <img src="img/facebook_icon.png" alt="Facebook" style="height:40px;" />
@@ -196,6 +197,7 @@
                     <a href="http://www.youtube.com/user/BlastZoneStudios">
                         <img src="img/youtube_icon.png" alt="Youtube" style="height:40px;" />
                     </a>
+                  </section>
                 </div>
 
                     <!-- Blog Categories Well -->
