--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
                          <img class="img-responsive" src="http://placehold.it/900x300" alt="">
                        <hr>
                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
-                        <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                      <!--  <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a> -->
                   </article>
                   <hr>
 
-                <!-- Pager -->
+                <!-- Pager
                 <ul class="pager">
                     <li class="previous">
                         <a href="#">&larr; Older</a>
@@ -126,6 +126,7 @@
                         <a href="#">Newer &rarr;</a>
                     </li>
                 </ul>
+              -->
 
             </div>
 
