--- a/index.html
+++ b/index.html
@@ -178,17 +178,17 @@
                             <div class="row">
                                 <div class="col-lg-6">
                                     <ul class="list-unstyled">
-                                        <li><a href="#">Example</a>
+                                        <li><a href="#">Exploring Horror</a>
                                         </li>
-                                        <li><a href="#">Example</a>
+                                   <!-- <li><a href="#">Example</a>
                                         </li>
                                         <li><a href="#">Example</a>
                                         </li>
                                         <li><a href="#">Example</a>
                                         </li>
                                     </ul>
-                                </div>
-                                <!-- /.col-lg-6 -->
+                                </div> -->
+                                <!-- /.col-lg-6
                                 <div class="col-lg-6">
                                     <ul class="list-unstyled">
                                         <li><a href="#">Example</a>
@@ -200,7 +200,7 @@
                                         <li><a href="#">Example</a>
                                         </li>
                                     </ul>
-                                </div>
+                                </div> -->
                                 <!-- /.col-lg-6 -->
                             </div>
                             <!-- /.row -->
