--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Contact us: (xxx) xxx-xxxx or support@blastzonestudios.com. Copyright &copy; Blast Zone Studios 2014</p>
+                    <p>Contact us: <a href="mailto:support@blastzonestudios.com?subject=Hello%20There!" title="Email">support@blastzonestudios.com</a>
+                        Copyright &copy; Blast Zone Studios 2014</p>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
