--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="index.html">Blog</a>
+                        <a href="#firstPost">Blog</a>
                     </li>
 		            <li>
-                        <a href="#">Contact</a>
+                        <a href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -101,7 +101,7 @@
         <div class="row">
 
             <!-- Blog Entries Column -->
-            <div class="col-md-8">
+            <div class="col-md-8" id="firstPost">
                 <!-- First Blog Post -->
                   <article>
                     <header>
@@ -214,7 +214,7 @@
 
         <!-- Footer -->
         <footer>
-            <div class="row">
+            <div class="row" id="contact">
                 <div class="col-lg-12">
                     <p>Contact us: <a href="mailto:support@blastzonestudios.com?subject=Hello%20There!" title="Email">support@blastzonestudios.com</a>
                         Copyright &copy; Blast Zone Studios 2014</p>
