--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
 
         <!-- Footer -->
         <footer>
-            <div class="row" id="contact">
-                <div class="col-lg-12">
+            <div class="row">
+                <div class="col-lg-12" id="contact">
                     <p>Contact us: <a href="mailto:support@blastzonestudios.com?subject=Hello%20There!" title="Email">support@blastzonestudios.com</a>
                         Copyright &copy; Blast Zone Studios 2014</p>
                 </div>
