--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
                   <article>
                     <header>
                        <h2>
-                        <a href="#">Update on Haunted House Game</a>
+                        <a href="#">Exploring Horror</a>
                         </h2>
-                          <p>October 5th, 2014</p>
+                          <p>December 10th, 2014</p>
                        </header>
                          <img class="img-responsive" src="http://placehold.it/900x300" alt="">
                        <hr>
-                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                       <p>Hey everyone! It’s been a while since we’ve made an update. We are currently working on a horror title for the Oculus Rift! Rather then a game, we’re making an experience. Users will just need to sit back and watch as the horror unfolds within their headsets. We will provide addition details about this in the next few days. </p>
                       <!--  <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a> -->
                   </article>
                   <hr>
@@ -178,7 +178,7 @@
                             <div class="row">
                                 <div class="col-lg-6">
                                     <ul class="list-unstyled">
-                                        <li><a href="#">Exploring Horror</a>
+                                        <li><a href="#firstPost">Exploring Horror</a>
                                         </li>
                                    <!-- <li><a href="#">Example</a>
                                         </li>
