--- a/games.html
+++ b/games.html
@@ -97,9 +97,10 @@
                 <a class="carousel-control right" data-slide="next" href="#this-carousel-id"></a>
             </div><!-- /.carousel -->
 		</div>
-        <br><br>
+
         <div class="row">
 
+          <h2 id ="games" class="page-header">Games</h2>
           <div class="row">
             <div id="aimforthenest" class="col-lg-3 col-md-4 col-xs-6 thumb">
               <div class="thumbnail">
