added staff titles

--- a/about.html
+++ b/about.html
@@ -112,7 +112,10 @@
                         <header>
                             <h3>Steven</h3>
                         </header>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                        <p>Game Designer</p>
+                        <p>Programmer</p>
+                        <p>3D Artist</p>
+                        <p>steven@blastzonestudios.com</p>
                     </section>
                 </div>
 				<div class="col-sm-3">
@@ -123,7 +126,9 @@
                         <header>
                             <h3>Jimmy</h3>
                         </header>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                        <p>Programmer</p>
+                        <p>Systems Architect</p>
+                        <p>jimmy@blastzonestudios.com</p>
                     </section>
                 </div>
             </div>
@@ -136,7 +141,8 @@
                         <header>
                             <h3>Raleigh</h3>
                         </header>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                        <p>Public Relations</p>
+                        <p>raleigh@blastzonestudios.com</p>
                     </section>
                 </div>
                 <div class="col-sm-3">
@@ -147,7 +153,8 @@
                         <header>
                             <h3>Audrie</h3>
                         </header>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                        <p>Graphic Designer</p>
+                        <p>audrie@blastzonestudios.com</p>
                     </section>
                 </div>
             </div>
@@ -160,7 +167,8 @@
                         <header>
                             <h3>Dana</h3>
                         </header>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                        <p>Narrative Designer</p>
+                        <p>dana@blastzonestudios.com</p>
                     </section>
                 </div>
 				<div class="col-sm-3">
@@ -171,7 +179,9 @@
                         <header>
                             <h3>Dan</h3>
                         </header>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                        <p>Composer</p>
+                        <p>Sound Engineer</p>
+                        <p>dan@blastzonestudios.com</p>
                     </section>
                 </div>
             </div>
@@ -184,7 +194,8 @@
                         <header>
                             <h3>Aaron</h3>
                         </header>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                        <p>Production Assistant</p>
+                        <p>aaron@blastzonestudios.com</p>
                     </section>
                 </div>
                 <div class="col-sm-3">
@@ -195,7 +206,8 @@
                         <header>
                             <h3>Dean</h3>
                         </header>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                        <p>Production Assistant</p>
+                        <p>dean@blastzonestudios.com</p>
                     </section>
                 </div>
             </div>
